# kettle-pay-contracts

./: .gitignore  .gitmodules  .solcover.js  Anchor.toml  README.md  hardhat.config.ts  ignition-launch.sh  package.json  schema.graphql  subgraph.yaml
abis/: PaymentIntentHandler.json  PaymentIntentHandlerV3.json  SafeTransferRouter.json
contracts/: CCTPBurnHookWrapper.sol  CCTPHookWrapper.sol  CCTPMintHookWrapper.sol  PaymentIntentHandler.sol  SafeTransfer.sol  Signatures.sol  Structs.sol  SwapRouter02Wrapper.sol  SwapWrapper.sol
contracts/cctp/: CCTPBurnHookWrapper.sol  CCTPMintHookWrapper.sol
contracts/core/: SafeTransfer.sol  SafeTransferV2.sol  SafeTransferV3.sol
contracts/interfaces/: IPaymentHook.sol  ISwapTarget.sol  IWETH.sol
contracts/mocks/: MockERC20.sol  MockLiquidityTarget.sol  MockMessageTransmitter.sol  MockWeth.sol
contracts/v1/: PaymentIntentHandler.sol  Signatures.sol  Structs.sol
contracts/v2/: PaymentIntentHandlerV2.sol  Signatures.sol  Structs.sol
contracts/v3/: PaymentIntentHandlerV3.sol  Signatures.sol
contracts/v4/: PaymentIntentHandlerV4.sol  Signatures.sol  Structs.sol
contracts/wrapper/: SwapWrapper.sol
handlers/: paymentIntent.ts  safeTransfer.ts
ignition/modules/: CCTPBurnHookWrapper.ts  CCTPHookWrapper.ts  PaymentIntentHandler.ts
programs/cctp_burn_hook_wrapper/: Cargo.toml
programs/cctp_burn_hook_wrapper/src/: lib.rs
programs/order-event-program/: Cargo.toml
programs/order-event-program/src/: lib.rs
test/: PaymentIntentV1.test.ts  encode.ts  signature.ts  types.ts  utils.ts
utils/: packPaymentIntent.ts
(+65 files in other folders)
